syntax = "proto3";

package auth;
option go_package = "github.com/Ddarli/svc/auth/proto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
}

message RegisterRequest{
  string username = 1;
  string email = 2;
  string password = 3;
  string phone = 4;
}

message RegisterResponse{
  string token = 1;
}