syntax = "proto3";

package fileservice;

option go_package = "data-processor/proto/fileservice";

// Запрос на отправку файла (в потоке)
message FileChunk {
  string user_id = 1;
  string file_name = 2;
  string mime_type = 3;
  bytes chunk_data = 4;
}

// Ответ после успешной загрузки
message UploadFileResponse {
  string message = 1;
  string stored_file_path = 2;
}

// Запрос на получение файла
message DownloadFileRequest {
  string file_id = 1; // Или путь, или другой идентификатор
}

// Ответ при получении файла (в потоке)
message FileDownloadChunk { 
  string file_name = 1;
  string mime_type = 2;
  bytes chunk_data = 3;
}

service FileService {
  // Загрузка файла с клиента (streaming upload)
  rpc UploadFile(stream FileChunk) returns (UploadFileResponse);

  // Получение файла с сервера (streaming download)
  rpc DownloadFile(DownloadFileRequest) returns (stream FileDownloadChunk);
}
